# brave-core

./: DEPS  package-lock.json  package.json
android/: brave_java_sources.gni
app/: actor_strings.grdp  brave_generated_resources.grd  brave_origin_strings.grd  brave_settings_strings.grdp  brave_strings.grd  generated_resources.grd  generated_resources_override.grd  glic_strings.grdp  settings_strings.grdp
browser/: about_flags.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  sources.gni
components/: autofill_strings.grdp
ios/: BUILD.gn
ios/web/js_messaging/: BUILD.gn  prompt_facade_unittest.mm
patches/: DEPS.patch  base-BUILD.gn.patch  build-config-android-internal_rules.gni.patch  build-toolchain-apple-toolchain.gni.patch  chrome-android-BUILD.gn.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-appmenu-AppMenuPropertiesDelegateImpl.java.patch  chrome-android-java-src-org-chromium-chrome-browser-ntp-NewTabPage.java.patch  chrome-android-java-src-org-chromium-chrome-browser-sync-settings-ManageSyncSettings.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-actor-ui-handoff_button_controller.cc.patch  chrome-browser-bookmarks-android-java-src-org-chromium-chrome-browser-bookmarks-BookmarkUtils.java.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-notifications-BUILD.gn.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-resources-tab_search-tab_search_page.ts.patch  chrome-browser-sessions-session_restore.cc.patch  chrome-browser-storage_access_api-storage_access_grant_permission_context.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-actions-chrome_action_id.h.patch  chrome-browser-ui-browser_live_tab_context.cc.patch  chrome-browser-ui-browser_window-internal-browser_window_features.cc.patch  chrome-browser-ui-page_action-page_action_controller.cc.patch  (+36 more)
test/: BUILD.gn
(+232 files in other folders)
